Updated the CSS references capitalization of the ScalySans folder. Hopefully this corrects [Issue #1] Changed image references in README and module.json to use github raw links. Changed the format of the CHANGELOG file to be more attractive and readable. Updated the description in the module.json to use the full description text instead of the short About text.

--- a/styles/apsj.css
+++ b/styles/apsj.css
@@ -41,56 +41,56 @@
 
 @font-face {
     font-family: 'ScalySans';
-    src: url('../fonts/Scalysans/ScalySans.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySans.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ScalySans';
-    src: url('../fonts/Scalysans/ScalySansBold.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansBold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ScalySans';
-    src: url('../fonts/Scalysans/ScalySansItalic.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansItalic.otf') format('opentype');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'ScalySans';
-    src: url('../fonts/Scalysans/ScalySansBoldItalic.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansBoldItalic.otf') format('opentype');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'ScalySansCaps';
-    src: url('../fonts/Scalysans/ScalySansCaps.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansCaps.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ScalySansCaps';
-    src: url('../fonts/Scalysans/ScalySansCapsBold.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansCapsBold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ScalySansCaps';
-    src: url('../fonts/Scalysans/ScalySansCapsItalic.otf') format('opentype');
+    src: url('../fonts/ScalySans/ScalySansCapsItalic.otf') format('opentype');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'ScalySansCaps';
-    src: url('../fonts/Scalysans/ScalySansCapsBoldItalic.otf')
+    src: url('../fonts/ScalySans/ScalySansCapsBoldItalic.otf')
         format('opentype');
     font-weight: bold;
     font-style: italic;
